# message_board_client

./: README.md  config_client_nimda.yaml  config_client_test.yaml  config_secure_key.txt  pyproject.toml  test_input.yaml
scripts/: demo.py  demo_with_cli.py  generate_configs.py  secure_key.py
src/message_board_client/: __init__.py  core.py
