[project]
name = "message-board-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "cryptography>=46.0.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
message-board-client = "message_board_client:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
